# graphynx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  compile-kernel.sh  deny.toml  flake.nix  rust-toolchain.toml  tarpaulin.toml
.opencode/plans/: tensor-type-plan.md
backends/: Cargo.toml
backends-cuda/: Cargo.toml  build.rs  kernel.cu  kernel.ptx
backends-cuda/src/: lib.rs
backends/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/ops/: mod.rs  params.rs
core/src/types/: device_id.rs  dim.rs  dtype.rs  layout.rs  mod.rs  tensor_type.rs
core/src/types/shape/: mod.rs  ops.rs
docs/: architecture.md  backend-trait.md  cuda-backend.md  dtype.md  getting-started.md  ml-op.md  shape.md  tensor-type.md
playground/: Cargo.toml
playground/src/: scratch.rs
reviews/: arch-principal-2026-04-23.md
runtime/: Cargo.toml
runtime/src/: lib.rs  main.rs
runtime/tests/: run_kernel_toy.rs  type_system_toy.rs
runtime/tests/common/: mod.rs
src/: backend.rs  cuda_backend.rs  dtype.rs  lib.rs  main.rs  ml_op.rs  tensor_type.rs
src/backends/: mod.rs
src/backends/compute/: cuda.rs  mod.rs
src/backends/ml/: mod.rs
src/core/ops/: mod.rs  params.rs
src/core/types/: dim.rs  dtype.rs  mod.rs  tensor_type.rs
src/core/types/shape/: mod.rs  ops.rs
src/shape/: mod.rs  ops.rs
tests/: run_kernel_toy.rs  type_system_toy.rs
tests/common/: mod.rs
