[package]
name = "graphynx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A graph-based runtime for heterogeneous CPU–GPU computation"
repository = "https://github.com/vansweej/graphynx"

[dependencies]
cudarc = { version = "0.9", default-features = false, features = ["driver", "std"] }
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
