[workspace]
resolver = "2"
members = [
    "core",
    "backends",
    "backends-cuda",
    "runtime",
    "playground",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/vansweej/graphynx"

[workspace.dependencies]
# External
bytemuck   = { version = "1", features = ["derive"] }
cudarc     = { version = "0.9", default-features = false, features = ["driver", "std"] }
env_logger = "0.11"
log        = "0.4"
thiserror  = "2"

# Workspace-internal
graph-core    = { path = "core" }
backends      = { path = "backends" }
backends-cuda = { path = "backends-cuda" }
runtime       = { path = "runtime" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
