[package]
name        = "backends-cuda"
description = "CUDA backend implementation for graphynx"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
backends  = { workspace = true }
bytemuck  = { workspace = true }
cudarc    = { workspace = true }
log       = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
