[package]
name        = "backends"
description = "Backend trait, DeviceId, and BackendError for graphynx"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
graph-core = { workspace = true }
log       = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
