[package]
name        = "graph-core"
description = "Backend-agnostic types and ML-op catalog for graphynx"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
thiserror  = { workspace = true }
bytemuck   = { workspace = true }

[lints]
workspace = true
